Choosing of sort order type support was added