@@ -4,9 +4,11 @@ import org.lennardjones.investmanager.entities.Purchase;
 import org.lennardjones.investmanager.entities.Sale;
 import org.lennardjones.investmanager.model.Transaction;
 
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * This util class is supposed to validate queue of purchases and sales considering their amount and date.
@@ -43,48 +45,66 @@ public class PurchaseSaleUtil {
     }
 
     /**
-     * This method sorts purchase list by the specified type of sort
+     * This method sorts purchase list by the specified type of sort in the specified order type
      *
      * @param purchaseList list to sort
      * @param sortType type of sort
+     * @param sortOrderType type of order sort
      * @return sorted purchase list
      */
-    public static List<Purchase> sortPurchaseList(List<Purchase> purchaseList, SortType sortType) {
-        return switch (sortType) {
+    public static List<Purchase> sortPurchaseList(List<Purchase> purchaseList,
+                                                  SortType sortType,
+                                                  SortOrderType sortOrderType) {
+        var resultPurchaseList = switch (sortType) {
             case NONE -> purchaseList.stream()
                         .sorted(Comparator.comparing(Purchase::getId))
-                        .toList();
+                        .collect(Collectors.toList());
             case NAME -> purchaseList.stream()
                         .sorted(Comparator.comparing(Purchase::getName)
                                 .thenComparing(Purchase::getDate))
-                        .toList();
+                        .collect(Collectors.toList());
             case DATE -> purchaseList.stream()
                         .sorted(Comparator.comparing(Purchase::getDate)
                                 .thenComparing(Purchase::getName))
-                        .toList();
+                        .collect(Collectors.toList());
         };
+
+        if (sortOrderType.equals(SortOrderType.DEC)) {
+            Collections.reverse(resultPurchaseList);
+        }
+
+        return resultPurchaseList;
     }
 
     /**
-     * This method sorts sale list by the specified type of sort
+     * This method sorts sale list by the specified type of sort in the specified order type
      *
      * @param saleList list to sort
      * @param sortType type of sort
+     * @param sortOrderType type of order sort
      * @return sorted sale list
      */
-    public static List<Sale> sortSaleList(List<Sale> saleList, SortType sortType) {
-        return switch (sortType) {
+    public static List<Sale> sortSaleList(List<Sale> saleList,
+                                          SortType sortType,
+                                          SortOrderType sortOrderType) {
+        var resultSaleList = switch (sortType) {
             case NONE -> saleList.stream()
                         .sorted(Comparator.comparing(Sale::getId))
-                        .toList();
+                        .collect(Collectors.toList());
             case NAME -> saleList.stream()
                         .sorted(Comparator.comparing(Sale::getName)
                                 .thenComparing(Sale::getDate))
-                        .toList();
+                        .collect(Collectors.toList());
             case DATE -> saleList.stream()
                         .sorted(Comparator.comparing(Sale::getDate)
                                 .thenComparing(Sale::getName))
-                        .toList();
+                        .collect(Collectors.toList());
         };
+
+        if (sortOrderType.equals(SortOrderType.DEC)) {
+            Collections.reverse(resultSaleList);
+        }
+
+        return resultSaleList;
     }
 }
